--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "app/app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "  nodemon app/app.js  localhost 8080"
   },
   "author": "sgu6ena",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "express": "^5.0.0-alpha.2",
+    "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.4",
